--- a/김모건/241101.md
+++ b/김모건/241101.md
@@ -11,26 +11,23 @@
 
 ## ✅ 10/31 Todo List
 
-- [x] 한입 Next 챌린지 Day02
-- [ ] 소프티어 Lv01 4개 풀기
-- [ ] 현대카드 지원 작성 시작 -> 합격 자소서 자료조사 (8건 수집)
-- [x] 운동 30분
+- [ ] 한입 Next 챌린지 Day03
+- [ ] 현대카드 지원 작성 시작
+- [ ] 소프티어 Lv01 2개 풀기
+- [ ] 운동 30분
 
 ## 🎉 셀프 피드백
 
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Hugging%20Face.png" alt="Hugging Face" width="25" height="25"> 격려하기</img>
 
-> 다시 잠들긴 했지만, 일찍 자고 일찍 일어나서 칭찬해 ~
+> 어제보다 오늘 몰입한 하루였어! 파이팅 ~ 🔥
 
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Face%20with%20Monocle.png" alt="Face with Monocle" width="25" height="25"> 반성하기</img>
 
-> 코딩테스트 문제 푸는 부분을 효율적으로 접근할 필요가 있어! </br>
-> 1시간이 넘어가도록 고민하고 끙끙거리니까 지치게 되는거지. </br>
-> 20분 이상 제자리를 맴도는 느낌이 들면 해답을 찾고 넘어가도록 하자
+> 잠에 못드는 이유를 찾아야 겠어.
 
 ## 🌱 Next
 
-- 한입 Next 챌린지 Day03
-- (순서 변경) 현대카드 지원 작성 시작
-- 소프티어 Lv01 2개 풀기
-- 운동 30분
+- 아차산 등반
+- 한입 Next 챌린지 Day04
+- 현대카드 지원 작성 시작
