--- a/류재준/241101.md
+++ b/류재준/241101.md
@@ -21,8 +21,9 @@
 
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Face%20with%20Monocle.png" alt="Face with Monocle" width="25" height="25"> 반성하기</img>
 
-> 아니근데 강의듣다가 졸았음... supabase 설명부분에서 갑자기 딮슬립 시전... 그대로 앉아서 2시간 잔듯...(꿀잠)
-> 강의에 집중하자 집중하자... 그래도 아직 초반이라 그런지 정리는 수월한듯
+> 아니근데 강의듣다가 졸았음... supabase 설명부분에서 갑자기 딮슬립 시전...<br/>
+> 그대로 앉아서 2시간 잔듯...(꿀잠)<br/>
+> 강의에 집중하자 집중하자... 그래도 아직 초반이라 그런지 정리는 수월한듯<br/>
 
 ## 🌱 Next
 
