--- a/류재준/241101.md
+++ b/류재준/241101.md
@@ -9,6 +9,7 @@
 
 ## ✅ 11/01 Todo List
 
+- [x] 로그인/회원가입 통합UI PR 완료 🦆
 - [x] 한입 Next 챌린지 Day01 / 수강 Day01
 - [x] 30분 이상 운동 : 땀나는건 아니지만 오전에 1시간 산책 완
 - [ ] 메인페이지 개선 작업 : 스터디 이후 시작...
