--- a/김모건/241101.md
+++ b/김모건/241101.md
@@ -1,4 +1,4 @@
-# 스터디원: 김모건
+bㅠ# 스터디원: 김모건
 
 ## 🚀 이번주 계획
 
@@ -9,25 +9,28 @@
   - 운동 30분 이상 꾸준히
 - 스터디 방향 잡기
 
-## ✅ 10/31 Todo List
+## ✅ 11/01 Todo List
 
-- [ ] 한입 Next 챌린지 Day03
-- [ ] 현대카드 지원 작성 시작
+- [x] 한입 Next 챌린지 Day04
+- [ ] 현대카드 지원 작성 시작 -> 보류
 - [ ] 소프티어 Lv01 2개 풀기
 - [ ] 운동 30분
+- [ ] 프로젝트 2차 리패터링 배포 -> 22 ~ 24 사이 예정
 
 ## 🎉 셀프 피드백
 
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Hugging%20Face.png" alt="Hugging Face" width="25" height="25"> 격려하기</img>
 
-> 어제보다 오늘 몰입한 하루였어! 파이팅 ~ 🔥
+> 한입 챌린지는 꾸준히 하고 있는 모습이 보기 좋아 ~ 🔥
 
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Smilies/Face%20with%20Monocle.png" alt="Face with Monocle" width="25" height="25"> 반성하기</img>
 
-> 잠에 못드는 이유를 찾아야 겠어.
+> 오락가락한 수면패턴을 바로잡는 게 쉽지 않네. </br>
+> 엉망이라 붕뜬 시간에도 유튜브 보지 말고 공부하면 지쳐서 잠들지 않을까 싶다.
 
 ## 🌱 Next
 
 - 아차산 등반
-- 한입 Next 챌린지 Day04
-- 현대카드 지원 작성 시작
+- 한입 Next 챌린지 Day05
+- (보류) 현대카드 지원 작성 시작
+- (보류) 원티드 프론트엔드 챌린지 사전 과제
