--- a/김모건/241101.md
+++ b/김모건/241101.md
@@ -4,6 +4,7 @@
 
 - 하루 루틴 정상화
 - 하루 계획표 조정하기
+  - 주 1회 지원서 제출
   - 한입 Next 챌린지 7일 연속 달성
   - 소프티어 문제 적응과 코테 실력 객관화
   - 운동 30분 이상 꾸준히
@@ -15,7 +16,7 @@
 - [ ] 현대카드 지원 작성 시작 -> 보류
 - [ ] 소프티어 Lv01 2개 풀기
 - [ ] 운동 30분
-- [ ] 프로젝트 2차 리패터링 배포 -> 22 ~ 24 사이 예정
+- [x] 프로젝트 2차 리패터링 배포 -> 22 ~ 24 사이 예정
 
 ## 🎉 셀프 피드백
 
