--- a/김모건/241101.md
+++ b/김모건/241101.md
@@ -16,7 +16,7 @@
 - [ ] 현대카드 지원 작성 시작 -> 보류
 - [ ] 소프티어 Lv01 2개 풀기
 - [ ] 운동 30분
-- [x] 프로젝트 2차 리패터링 배포 -> 22 ~ 24 사이 예정
+- [ ] 프로젝트 2차 리패터링 배포 -> 22 ~ 24 사이 예정
 
 ## 🎉 셀프 피드백
 
